# tzviki

./: .env.example  pyproject.toml
.github/workflows/: daily.yml
src/tzviki/: __init__.py  app.py
